# mailmkt

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
ci/: main.yml
data/: .~lock.prueba.csv#  distribution_list_Bank Drafts.csv  distribution_list_Bank Guarantees.csv  distribution_list_Business Loan.csv  distribution_list_Car Loan.csv  distribution_list_Credit Cards.csv  distribution_list_Current Account.csv  distribution_list_Direct Debits.csv  distribution_list_Education Loan.csv  distribution_list_Equipment Leasing.csv  distribution_list_FX Swaps.csv  distribution_list_Fixed Deposit.csv  distribution_list_Foreign Currency Account.csv  distribution_list_Foreign Currency Loan.csv  distribution_list_Forward FX.csv  distribution_list_Green Financing Scheme.csv  distribution_list_Home Insurance.csv  distribution_list_Home Loan.csv  distribution_list_International Loans and Overdrafts.csv  distribution_list_International Multi-Currency Account.csv  distribution_list_International Term Deposit Account.csv  distribution_list_Internet Banking.csv  distribution_list_Junior Savings Account.csv  distribution_list_Letter of Credit.csv  distribution_list_Loans.csv  distribution_list_Marine Insurance.csv  distribution_list_MauBank WithMe (Mobile App).csv  distribution_list_Medical Equipment Leasing.csv  distribution_list_MoneyGrow Savings Account.csv  distribution_list_Mortgages.csv  distribution_list_Motor Vehicle Insurance.csv  distribution_list_Overdraft.csv  (+42 more)
(+60 files in other folders)
